add indent line and remove cursor column highlight

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "vim/bundle/vim-template"]
 	path = vim/bundle/vim-template
 	url = https://github.com/aperezdc/vim-template.git
+[submodule "vim/bundle/indentLine"]
+	path = vim/bundle/indentLine
+	url = https://github.com/Yggdroot/indentLine.git
